Fix alignment in leads table

--- a/frontend/src/views/Leads/styles.scss
+++ b/frontend/src/views/Leads/styles.scss
@@ -58,11 +58,7 @@
                     top: 0;
                 }
 
-                .status {
-                    text-transform: capitalize;
-                }
-
-
+                .status,
                 .confidentiality {
                     text-transform: capitalize;
                 }
@@ -89,6 +85,26 @@
 
                     .actions {
                         width: 180px;
+                    }
+
+                    .created_at,
+                    .published_on,
+                    .no_of_entries {
+                        align-items: right;
+                        justify-content: right;
+                        text-align: right;
+                    }
+
+                    .headers {
+                        .created_at,
+                        .published_on,
+                        .no_of_entries {
+                            display: flex;
+                            align-items: right;
+                            justify-content: flex-end;
+                            text-align: right;
+                            color: red;
+                        }
                     }
                 }
             }
